# pyramids_journal

./: .dockerignore  .env.example  .gitignore  CONSISTENCY_PLAN.md  Daily_Trading_Summary.md  Dockerfile  INCIDENT_REPORT_2026-01-23.md  README.md  config.yaml  docker-compose.test.yml  docker-compose.yml  new.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sow.md  test  test_equity_curve.py  trades_export_20260121.xlsx  tradingview alerts.csv
.claude/: settings.local.json
app/: __init__.py  config.py  database.py  main.py  models.py
app/bot/: __init__.py  bot.py  formatters.py  handlers.py  menu.py
app/commands/: __init__.py  seed_trades.py
app/exchanges/: __init__.py  base.py  binance.py  bybit.py  gateio.py  kucoin.py  mexc.py  okx.py
app/services/: csv_seeder.py  error_notifier.py  exchange_service.py  report_service.py  symbol_normalizer.py  telegram_service.py  trade_service.py
tests/: TEST_STRATEGY.md  __init__.py  conftest.py  test_bot.py  test_config.py  test_database.py  test_exchanges.py  test_formatters.py  test_handlers.py  test_main.py  test_menu.py  test_models.py  test_pnl_calculations.py  test_report_service.py  test_symbol_normalizer.py  test_telegram_service.py  test_trade_service.py
